k8s/sea-mengxin-ml-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sea-mengxin-ml-clusterip
spec:
  selector:
    app: sea-mengxin-ml
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
