k8s/tunnel-mengxin-ml-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: tunnel-mengxin-ml-clusterip
spec:
  selector:
    app: tunnel-mengxin-ml
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
