k8s/ingress-controller-argo-tunnel.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: mengxin-asia-southeast1-k8s-ingress-arog-tunnel-service
    annotations:
        kubernetes.io/ingress.class: argo-tunnel
        # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
        # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    labels:
        ingress: argo-tunnel
spec:
    tls:
        - hosts:
              - tunnel.mengxin.ml
          secretName: mengxin-ml-argo-tunnel-cert
    rules:
        - host: tunnel.mengxin.ml
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: tunnel-mengxin-ml-clusterip
                        servicePort: 80
