k8s/ingress-controller.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: mengxin-asia-southeast1-k8s-ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/ssl-passthrough: "true"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
    rules:
        - host: sea.mengxin.ml
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: sea-mengxin-ml-clusterip
                        servicePort: 80
        - host: httpbin.mengxin.ml
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: httpbin-mengxin-ml-clusterip
                        servicePort: 80
